[gd_scene load_steps=8 format=3 uid="uid://ssoq5bj86141"]

[ext_resource type="Script" path="res://src/login/log_in.gd" id="1_ir45v"]
[ext_resource type="Texture2D" uid="uid://dan8wahejn7fr" path="res://icon.svg" id="2_n05ia"]
[ext_resource type="Script" path="res://src/login/IpText.gd" id="3_rww1i"]
[ext_resource type="Texture2D" uid="uid://6jpyaxer2ie2" path="res://src/login/load-icon.png" id="4_0axx1"]

[sub_resource type="Animation" id="Animation_mtkuu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ylp56"]
resource_name = "spin"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_by6fl"]
_data = {
"RESET": SubResource("Animation_mtkuu"),
"spin": SubResource("Animation_ylp56")
}

[node name="LogIn" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 150
alignment = 1
script = ExtResource("1_ir45v")
metadata/_edit_lock_ = true

[node name="Customization" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1
metadata/_edit_lock_ = true

[node name="PlayerName" type="VBoxContainer" parent="Customization"]
layout_mode = 2

[node name="Label" type="Label" parent="Customization/PlayerName"]
layout_mode = 2
text = "Player's Name"
horizontal_alignment = 1

[node name="NameText" type="TextEdit" parent="Customization/PlayerName"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "Default"
scroll_fit_content_height = true

[node name="PlayerColor" type="VBoxContainer" parent="Customization"]
layout_mode = 2

[node name="Label" type="Label" parent="Customization/PlayerColor"]
layout_mode = 2
text = "Player Color"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Color" type="HBoxContainer" parent="Customization/PlayerColor"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ColorPickerButton" type="ColorPickerButton" parent="Customization/PlayerColor/Color"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
icon_alignment = 1
color = Color(1, 1, 1, 1)

[node name="PlayerVisual" type="TextureRect" parent="Customization/PlayerColor/Color"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_n05ia")

[node name="Connection" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1
metadata/_edit_lock_ = true

[node name="Host" type="Button" parent="Connection"]
layout_mode = 2
text = "Host"

[node name="Connect" type="VBoxContainer" parent="Connection"]
layout_mode = 2

[node name="Label" type="Label" parent="Connection/Connect"]
layout_mode = 2
text = "Connect to Server"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Connection/Connect"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="IpText" type="TextEdit" parent="Connection/Connect/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "127.0.0.1"
scroll_fit_content_height = true
script = ExtResource("3_rww1i")

[node name="Enter" type="Button" parent="Connection/Connect/HBoxContainer"]
layout_mode = 2
text = "Enter"

[node name="LoadingIcon" type="Control" parent="Connection/Connect/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(35, 35)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="Connection/Connect/HBoxContainer/LoadingIcon"]
position = Vector2(17.5, 17.5)
scale = Vector2(0.175, 0.175)
texture = ExtResource("4_0axx1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Connection/Connect/HBoxContainer/LoadingIcon"]
autoplay = "spin"
libraries = {
"": SubResource("AnimationLibrary_by6fl")
}

[node name="Warning" type="Label" parent="Connection/Connect"]
unique_name_in_owner = true
modulate = Color(0.960784, 0.137255, 0, 1)
layout_mode = 2
text = "Warning!"
horizontal_alignment = 1

[node name="Quit" type="Button" parent="Connection"]
layout_mode = 2
text = "Quit"

[connection signal="color_changed" from="Customization/PlayerColor/Color/ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="pressed" from="Connection/Host" to="." method="_on_host_pressed"]
[connection signal="text_changed" from="Connection/Connect/HBoxContainer/IpText" to="Connection/Connect/HBoxContainer/IpText" method="_on_text_changed"]
[connection signal="pressed" from="Connection/Connect/HBoxContainer/Enter" to="." method="_on_enter_pressed"]
[connection signal="pressed" from="Connection/Quit" to="." method="_on_quit_pressed"]
